--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -166,3 +166,11 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+# Custom bindings
+bind = CTRL, Space, exec, bemenu-run -b --hp 10 --fn 'Source Code Pro 16'
+
+# Mediakey bindings
+bindel=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
+bindel=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
