--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -170,6 +170,7 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Custom bindings
 bind = CTRL, Space, exec, bemenu-run -b --hp 10 --fn 'Source Code Pro 16'
+bind = CTRL_ALT, L, exec, swaylock
 
 # Mediakey bindings
 bindel=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
