--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -20,8 +20,9 @@ monitor=,preferred,0x0,1.4
 
 # Execute your favorite apps at launch
 # exec-once = waybar & hyprpaper & firefox
-# exec-once = swaybg -i ~/.config/wallpaper.jpg -m fill
+exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
+exec-once = nextcloud
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -38,6 +39,7 @@ input {
     kb_rules =
 
     follow_mouse = 0
+    float_switch_override_focus = 0
 
     touchpad {
         natural_scroll = no
@@ -116,6 +118,41 @@ device:epic-mouse-v1 {
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
+# Audio Manager
+windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$
+windowrulev2 = size 800 600,class:^(pavucontrol)$,title:^(Volume Control)$
+windowrulev2 = center,class:^(pavucontrol)$,title:^(Volume Control)$
+windowrulev2 = animation slide,class:^(pavucontrol)$,title:^(Volume Control)$
+
+# Bluetooth Manager
+windowrulev2 = float,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
+windowrulev2 = size 800 600,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
+windowrulev2 = center,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
+windowrulev2 = animation slide,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
+
+# Brave Browser
+windowrulev2 = float,class:^(brave)
+windowrulev2 = size 800 600,class:^(brave)
+windowrulev2 = center,class:^(brave)
+windowrulev2 = animation slide,class:^(brave)
+
+# Nextcloud
+windowrulev2 = float,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
+windowrulev2 = size 800 600,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
+windowrulev2 = center,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
+windowrulev2 = animation slide,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
+
+# Network Manager
+windowrulev2 = float,class:^(nm-connection-editor)$,floating:0
+windowrulev2 = size 800 600,class:^(nm-connection-editor)$,floating:0
+windowrulev2 = center,class:^(nm-connection-editor)$,floating:0
+windowrulev2 = animation slide,class:^(nm-connection-editor)$,floating:0
+
+# WPA Gui
+windowrulev2 = float,class:^(wpa_gui)$
+windowrulev2 = size 800 600,class:^(wpa_gui)$
+windowrulev2 = center,class:^(wpa_gui)$
+windowrulev2 = animation slide,class:^(wpa_gui)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -142,11 +179,11 @@ bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = ALT, 6, workspace, 6
+bind = ALT, 7, workspace, 7
+bind = ALT, 8, workspace, 8
+bind = ALT, 9, workspace, 9
+bind = ALT, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -165,11 +202,11 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+# bindm = $mainMod, mouse:272, movewindow
+# bindm = $mainMod, mouse:273, resizewindow
 
 # Custom bindings
-bind = CTRL, Space, exec, bemenu-run -b --hp 10 --fn 'Source Code Pro 16'
+bind = CTRL, Space, exec, bemenu-run -b --hp 10 --fn 'NotoSand Nerd Font 16'
 bind = CTRL_ALT, L, exec, swaylock
 
 # Mediakey bindings
