--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -23,6 +23,10 @@ monitor=,preferred,0x0,1.4
 exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
 exec-once = nextcloud
+exec-once = slack
+exec-once = kitty
+exec-once = code
+exec-once = brave --profile-directory="Default"
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -51,7 +55,7 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 0
+    gaps_in = 1
     gaps_out = 0
     border_size = 0
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
@@ -64,10 +68,10 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 0
-    blur = no
-    # blur_size = 5
-    # blur_passes = 1
-    # blur_new_optimizations = on
+    blur = yes
+    blur_size = 5
+    blur_passes = 1
+    blur_new_optimizations = on
 
     drop_shadow = no
     # shadow_range = 4
@@ -119,53 +123,80 @@ device:epic-mouse-v1 {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 # Audio Manager
-windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$
-windowrulev2 = size 800 600,class:^(pavucontrol)$,title:^(Volume Control)$
-windowrulev2 = center,class:^(pavucontrol)$,title:^(Volume Control)$
+windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$,floating:0
+windowrulev2 = size 800 600,class:^(pavucontrol)$,title:^(Volume Control)$,floating:0
+windowrulev2 = center,class:^(pavucontrol)$,title:^(Volume Control)$,floating:0
 windowrulev2 = animation slide,class:^(pavucontrol)$,title:^(Volume Control)$
 
 # Bluetooth Manager
-windowrulev2 = float,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
-windowrulev2 = size 800 600,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
-windowrulev2 = center,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
+windowrulev2 = float,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$,floating:0
+windowrulev2 = size 800 600,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$,floating:0
+windowrulev2 = center,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$,floating:0
 windowrulev2 = animation slide,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
 
 # Brave Browser
-windowrulev2 = float,class:^(brave)
-windowrulev2 = size 800 600,class:^(brave)
-windowrulev2 = center,class:^(brave)
-windowrulev2 = animation slide,class:^(brave)
+windowrulev2 = float,class:^(brave)$,floating:0
+windowrulev2 = size 800 600,class:^(brave)$,floating:0
+windowrulev2 = center,class:^(brave)$,floating:0
+windowrulev2 = animation slide,class:^(brave)$
+windowrulev2 = workspace 1,class:^(brave)$
+windowrulev2 = animation slide,class:^(brave-browser)$
+windowrulev2 = workspace 1,class:^(brave-browser)$
+
+# IDE
+windowrulev2 = float,class:^(code)$,floating:0
+windowrulev2 = size 800 600,class:^(code)$,floating:0
+windowrulev2 = center,class:^(code)$,floating:0
+windowrulev2 = animation slide,class:^(code)$
+windowrulev2 = workspace 3,class:^(code)$
+windowrulev2 = animation slide,class:^(code-url-handler)$
+windowrulev2 = workspace 3,class:^(code-url-handler)
+
+# Matrix Chat
+windowrulev2 = animation slide,class:^(fractal)$
+windowrulev2 = workspace 9,class:^(fractal)
 
 # Nextcloud
-windowrulev2 = float,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
-windowrulev2 = size 800 600,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
-windowrulev2 = center,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
+windowrulev2 = float,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
+windowrulev2 = size 800 600,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
+windowrulev2 = center,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
 windowrulev2 = animation slide,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
 
 # Network Manager
 windowrulev2 = float,class:^(nm-connection-editor)$,floating:0
 windowrulev2 = size 800 600,class:^(nm-connection-editor)$,floating:0
 windowrulev2 = center,class:^(nm-connection-editor)$,floating:0
-windowrulev2 = animation slide,class:^(nm-connection-editor)$,floating:0
+windowrulev2 = animation slide,class:^(nm-connection-editor)$
+
+# Slack
+windowrulev2 = animation slide,class:^(Slack)$
+windowrulev2 = workspace 10,class:^(Slack)
+
+# Terminal Emulator
+windowrulev2 = animation slide,class:^(kitty)$
+windowrulev2 = workspace 2,class:^(kitty)
 
 # WPA Gui
-windowrulev2 = float,class:^(wpa_gui)$
-windowrulev2 = size 800 600,class:^(wpa_gui)$
-windowrulev2 = center,class:^(wpa_gui)$
+windowrulev2 = float,class:^(wpa_gui)$,floating:0
+windowrulev2 = size 800 600,class:^(wpa_gui)$,floating:0
+windowrulev2 = center,class:^(wpa_gui)$,floating:0
 windowrulev2 = animation slide,class:^(wpa_gui)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, kitty
-bind = $mainMod, C, killactive,
-bind = $mainMod, Q, exit,
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, wofi --show drun
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+
+# Alternative binds
+bind = CTRL_ALT, K, killactive,
+bind = CTRL_ALT, L, exec, swaylock
+bind = CTRL_ALT, T, exec, kitty
+bind = CTRL_SHIFT_ALT, Q, exit,
+bind = CTRL, Space, exec, bemenu-run -b --hp 10 --fn 'NotoSand Nerd Font 16'
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
@@ -179,11 +210,11 @@ bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
 bind = $mainMod, 4, workspace, 4
 bind = $mainMod, 5, workspace, 5
-bind = ALT, 6, workspace, 6
-bind = ALT, 7, workspace, 7
-bind = ALT, 8, workspace, 8
-bind = ALT, 9, workspace, 9
-bind = ALT, 0, workspace, 10
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
@@ -197,19 +228,7 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-# bindm = $mainMod, mouse:272, movewindow
-# bindm = $mainMod, mouse:273, resizewindow
-
-# Custom bindings
-bind = CTRL, Space, exec, bemenu-run -b --hp 10 --fn 'NotoSand Nerd Font 16'
-bind = CTRL_ALT, L, exec, swaylock
-
-# Mediakey bindings
+# Mediakey binds
 bindel=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
 bindel=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
