--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -22,11 +22,13 @@ monitor=,preferred,0x0,1.4
 # exec-once = waybar & hyprpaper & firefox
 exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
-exec-once = nextcloud
 exec-once = slack
 exec-once = kitty
 exec-once = code
+exec-once = xdg-open obsidian://open?vault=Personal
+exec-once = xdg-open obsidian://open?vault=obsidian # JollyBits
 exec-once = brave --profile-directory="Default"
+exec-once = sleep 5 & nextcloud
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -143,6 +145,12 @@ windowrulev2 = workspace 1,class:^(brave)$
 windowrulev2 = animation slide,class:^(brave-browser)$
 windowrulev2 = workspace 1,class:^(brave-browser)$
 
+# Electron
+windowrulev2 = float,class:^(electron)$,floating:0
+windowrulev2 = size 800 600,class:^(electron)$,floating:0
+windowrulev2 = center,class:^(electron)$,floating:0
+windowrulev2 = animation slide,class:^(electron)$
+
 # IDE
 windowrulev2 = float,class:^(code)$,floating:0
 windowrulev2 = size 800 600,class:^(code)$,floating:0
@@ -150,11 +158,15 @@ windowrulev2 = center,class:^(code)$,floating:0
 windowrulev2 = animation slide,class:^(code)$
 windowrulev2 = workspace 3,class:^(code)$
 windowrulev2 = animation slide,class:^(code-url-handler)$
-windowrulev2 = workspace 3,class:^(code-url-handler)
+windowrulev2 = workspace 3,class:^(code-url-handler)$
 
 # Matrix Chat
+windowrulev2 = animation slide,class:^(Electron)$,title:^(Element)$
+windowrulev2 = workspace 9,class:^(Electron)$,title:^(Element)$
+windowrulev2 = animation slide,class:^(Element)$
+windowrulev2 = workspace 9,class:^(Element)$
 windowrulev2 = animation slide,class:^(fractal)$
-windowrulev2 = workspace 9,class:^(fractal)
+windowrulev2 = workspace 9,class:^(fractal)$
 
 # Nextcloud
 windowrulev2 = float,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
@@ -167,6 +179,10 @@ windowrulev2 = float,class:^(nm-connection-editor)$,floating:0
 windowrulev2 = size 800 600,class:^(nm-connection-editor)$,floating:0
 windowrulev2 = center,class:^(nm-connection-editor)$,floating:0
 windowrulev2 = animation slide,class:^(nm-connection-editor)$
+
+# Obsidian
+windowrulev2 = animation slide,class:^(obsidian)$
+windowrulev2 = workspace 4,class:^(obsidian)
 
 # Slack
 windowrulev2 = animation slide,class:^(Slack)$
@@ -190,6 +206,7 @@ bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen
 
 # Alternative binds
 bind = CTRL_ALT, K, killactive,
