--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -23,6 +23,7 @@ monitor=,preferred,0x0,1.4
 exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
 exec-once = slack
+exec-once = element-desktop
 exec-once = kitty
 exec-once = code
 exec-once = xdg-open obsidian://open?vault=Personal
