--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -207,7 +207,7 @@ bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, F, fullscreen
+bind = $mainMod, F, fullscreen, 1
 
 # Alternative binds
 bind = CTRL_ALT, K, killactive,
