--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -24,6 +24,7 @@ exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
 exec-once = slack
 exec-once = element-desktop
+exec-once = spotify
 exec-once = kitty
 exec-once = code
 exec-once = xdg-open obsidian://open?vault=Personal
@@ -119,85 +120,77 @@ device:epic-mouse-v1 {
     sensitivity = 0.0
 }
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+
+#---( Window Rules )-------------------------------------------------------------------------------
+
+windowrulev2 = animation slide,class:^(.*)$
 
 # Audio Manager
 windowrulev2 = float,class:^(pavucontrol)$,title:^(Volume Control)$,floating:0
-windowrulev2 = size 800 600,class:^(pavucontrol)$,title:^(Volume Control)$,floating:0
+windowrulev2 = size 1024 768,class:^(pavucontrol)$,title:^(Volume Control)$,floating:0
 windowrulev2 = center,class:^(pavucontrol)$,title:^(Volume Control)$,floating:0
-windowrulev2 = animation slide,class:^(pavucontrol)$,title:^(Volume Control)$
 
 # Bluetooth Manager
 windowrulev2 = float,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$,floating:0
-windowrulev2 = size 800 600,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$,floating:0
+windowrulev2 = size 1024 768,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$,floating:0
 windowrulev2 = center,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$,floating:0
-windowrulev2 = animation slide,class:^(.blueman-manager-wrapped)$,title:^(Bluetooth Devices)$
 
 # Brave Browser
 windowrulev2 = float,class:^(brave)$,floating:0
-windowrulev2 = size 800 600,class:^(brave)$,floating:0
+windowrulev2 = size 1024 768,class:^(brave)$,floating:0
 windowrulev2 = center,class:^(brave)$,floating:0
-windowrulev2 = animation slide,class:^(brave)$
 windowrulev2 = workspace 1,class:^(brave)$
-windowrulev2 = animation slide,class:^(brave-browser)$
 windowrulev2 = workspace 1,class:^(brave-browser)$
 
 # Electron
 windowrulev2 = float,class:^(electron)$,floating:0
-windowrulev2 = size 800 600,class:^(electron)$,floating:0
+windowrulev2 = size 1024 768,class:^(electron)$,floating:0
 windowrulev2 = center,class:^(electron)$,floating:0
-windowrulev2 = animation slide,class:^(electron)$
 
 # IDE
 windowrulev2 = float,class:^(code)$,floating:0
-windowrulev2 = size 800 600,class:^(code)$,floating:0
+windowrulev2 = size 1024 768,class:^(code)$,floating:0
 windowrulev2 = center,class:^(code)$,floating:0
-windowrulev2 = animation slide,class:^(code)$
 windowrulev2 = workspace 3,class:^(code)$
-windowrulev2 = animation slide,class:^(code-url-handler)$
 windowrulev2 = workspace 3,class:^(code-url-handler)$
 
 # Matrix Chat
-windowrulev2 = animation slide,class:^(Electron)$,title:^(Element)$
 windowrulev2 = workspace 9,class:^(Electron)$,title:^(Element)$
-windowrulev2 = animation slide,class:^(Element)$
 windowrulev2 = workspace 9,class:^(Element)$
-windowrulev2 = animation slide,class:^(fractal)$
 windowrulev2 = workspace 9,class:^(fractal)$
 
 # Nextcloud
 windowrulev2 = float,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
-windowrulev2 = size 800 600,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
+windowrulev2 = size 1024 768,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
 windowrulev2 = center,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$,floating:0
-windowrulev2 = animation slide,class:^(com.nextcloud.desktopclient.nextcloud)$,title:^(Nextcloud)$
+
+# Nemo
+windowrulev2 = workspace 5,class:^(nemo)$
 
 # Network Manager
 windowrulev2 = float,class:^(nm-connection-editor)$,floating:0
-windowrulev2 = size 800 600,class:^(nm-connection-editor)$,floating:0
+windowrulev2 = size 1024 768,class:^(nm-connection-editor)$,floating:0
 windowrulev2 = center,class:^(nm-connection-editor)$,floating:0
-windowrulev2 = animation slide,class:^(nm-connection-editor)$
 
 # Obsidian
-windowrulev2 = animation slide,class:^(obsidian)$
-windowrulev2 = workspace 4,class:^(obsidian)
+windowrulev2 = workspace 4,class:^(obsidian)$
 
 # Slack
-windowrulev2 = animation slide,class:^(Slack)$
-windowrulev2 = workspace 10,class:^(Slack)
+windowrulev2 = workspace 10,class:^(Slack)$
+
+# Spotify
+windowrulev2 = workspace 8,title:^(Spotify)$
 
 # Terminal Emulator
-windowrulev2 = animation slide,class:^(kitty)$
-windowrulev2 = workspace 2,class:^(kitty)
+windowrulev2 = workspace 2,class:^(kitty)$
 
 # WPA Gui
 windowrulev2 = float,class:^(wpa_gui)$,floating:0
-windowrulev2 = size 800 600,class:^(wpa_gui)$,floating:0
+windowrulev2 = size 1024 768,class:^(wpa_gui)$,floating:0
 windowrulev2 = center,class:^(wpa_gui)$,floating:0
-windowrulev2 = animation slide,class:^(wpa_gui)$
+
+
+#---( Keybinds )-----------------------------------------------------------------------------------
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
