feat: add eww config with resource overview

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -22,6 +22,8 @@ monitor=,preferred,0x0,1.4
 # exec-once = waybar & hyprpaper & firefox
 exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
+exec-once = eww open sidebar-right
+exec-once = eww open sidebar-left
 exec-once = slack
 exec-once = element-desktop
 exec-once = spotify
