feat: add signal-desktop application

--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -26,6 +26,7 @@ exec-once = eww open sidebar-right
 exec-once = eww open sidebar-left
 exec-once = slack
 exec-once = element-desktop
+exec-once = signal-desktop
 exec-once = spotify
 exec-once = kitty
 exec-once = code
@@ -176,6 +177,9 @@ windowrulev2 = center,class:^(nm-connection-editor)$,floating:0
 
 # Obsidian
 windowrulev2 = workspace 4,class:^(obsidian)$
+
+# Signal Desktop
+windowrulev2 = workspace 9,class:^(Signal)$
 
 # Slack
 windowrulev2 = workspace 10,class:^(Slack)$
