feat: add chromium browser

--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -145,6 +145,9 @@ windowrulev2 = center,class:^(brave)$,floating:0
 windowrulev2 = workspace 1,class:^(brave)$
 windowrulev2 = workspace 1,class:^(brave-browser)$
 
+# Chromium
+windowrulev2 = workspace 1,class:^(chromium-browser)$
+
 # Electron
 windowrulev2 = float,class:^(electron)$,floating:0
 windowrulev2 = size 1024 768,class:^(electron)$,floating:0
