--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -118,10 +118,8 @@ gestures {
     workspace_swipe = off
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#executing for more
-device:epic-mouse-v1 {
-    sensitivity = 0.0
+device:uniw0001:00-093a:0255-touchpad {
+    sensitivity = 1.0
 }
 
 
