--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -252,3 +252,6 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bindel=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
 bindel=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel=, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+
+# Switches
+bindl=, switch:Lid Switch, exec, $lockscreen
