chore: change style of bemenu

--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -216,7 +216,7 @@ bind = CTRL_ALT, K, killactive,
 bind = CTRL_ALT, L, exec, swaylock
 bind = CTRL_ALT, T, exec, $terminal
 bind = CTRL_SHIFT_ALT, Q, exit,
-bind = CTRL, Space, exec, bemenu-run -b --hp 10 --fn 'NotoSand Nerd Font 16'
+bind = CTRL, Space, exec, bemenu-run -b --hp 10 -H 30 --fn 'NotoSand Nerd Font 12'
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
