--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -30,7 +30,7 @@ exec-once = $terminal
 exec-once = code
 exec-once = xdg-open obsidian://open?vault=Personal
 exec-once = xdg-open obsidian://open?vault=obsidian # JollyBits
-exec-once = brave --profile-directory="Default"
+exec-once = chromium --profile-directory="Default"
 exec-once = sleep 5 & nextcloud
 
 env = XCURSOR_SIZE,24
