chore: update hyprland input configuration

--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -42,14 +42,21 @@ input {
     kb_options =
     kb_rules =
 
-    follow_mouse = 0
-    float_switch_override_focus = 0
+    float_switch_override_focus = 1
+    follow_mouse = 1
+    natural_scroll = 0
+    sensitivity = 0
 
     touchpad {
-        natural_scroll = no
+        clickfinger_behavior = 1
+        disable_while_typing = 1
+        natural_scroll = 1
+        tap-to-click = 1
     }
+}
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
+device:uniw0001:00-093a:0255-touchpad {
+    natural_scroll = 1
 }
 
 general {
