--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -186,6 +186,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1
+bind = $mainMod, N, exec, eww open --toggle notification_overlay
 
 # Alternative binds
 bind = CTRL_ALT, K, killactive,
