--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -16,7 +16,8 @@ $mainMod = SUPER
 
 #---( Config )-------------------------------------------------------------------------------------
 
-monitor=,preferred,0x0,1.4
+monitor=eDP-1, 2880x1800, 0x0, 1.2 #=2400x1500
+monitor=DP-3, 2560x1440, 2400x0, 1.0
 
 exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
@@ -181,7 +182,6 @@ windowrulev2 = center,class:^(wpa_gui)$,floating:0
 
 #---( Keybinds )-----------------------------------------------------------------------------------
 
-bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -194,13 +194,13 @@ bind = CTRL_ALT, T, exec, $terminal
 bind = CTRL_SHIFT_ALT, Q, exit,
 bind = CTRL, Space, exec, bemenu-run -b --hp 10 -H 30 --fn 'NotoSand Nerd Font 12'
 
-# Move focus with mainMod + arrow keys
+# Move focus
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Switch workspaces with mainMod + [0-9]
+# Switch workspaces
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
 bind = $mainMod, 3, workspace, 3
@@ -212,7 +212,7 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
+# Move active window to a workspace
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
 bind = $mainMod SHIFT, 3, movetoworkspace, 3
@@ -223,6 +223,11 @@ bind = $mainMod SHIFT, 7, movetoworkspace, 7
 bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
+
+# External monitors
+bind = $mainMod, E, focusmonitor, DP-3
+bind = $mainMod SHIFT, E, movecurrentworkspacetomonitor, DP-3
+bind = $mainMod SHIFT, R, movecurrentworkspacetomonitor, eDP-1
 
 # Mediakey binds
 bindel=, XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.0 @DEFAULT_AUDIO_SINK@ 5%+
