chore: extend external monitor support

--- a/modules/compositors/hyprland/config/hyprland.conf
+++ b/modules/compositors/hyprland/config/hyprland.conf
@@ -16,8 +16,23 @@ $mainMod = SUPER
 
 #---( Config )-------------------------------------------------------------------------------------
 
-monitor=eDP-1, 2880x1800, 0x0, 1.2 #=2400x1500
-monitor=DP-3, 2560x1440, 2400x0, 1.0
+monitor=eDP-1, 2880x1800, 80x1440, 1.2 #=2400x1500
+monitor=DP-3, 2560x1440, 2480x1400, 1.0
+monitor=desc:Acer Technologies ED323QUR, 2560x1440, 0x0, 1.0
+monitor=,preferred,auto,1
+
+workspace=eDP-1,1
+workspace=eDP-1,2
+workspace=eDP-1,3
+workspace=eDP-1,4
+workspace=eDP-1,5
+workspace=eDP-1,6
+workspace=eDP-1,7
+workspace=eDP-1,8
+workspace=eDP-1,9
+workspace=eDP-1,10
+workspace=DP-3,100
+workspace=HDMI-A-1,100
 
 exec-once = swaybg -i /home/chronicc/.config/wallpaper.jpg -m fill
 exec-once = waybar
@@ -226,7 +241,9 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # External monitors
 bind = $mainMod, E, focusmonitor, DP-3
+bind = $mainMod, E, focusmonitor, HDMI-A-1
 bind = $mainMod SHIFT, E, movecurrentworkspacetomonitor, DP-3
+bind = $mainMod SHIFT, E, movecurrentworkspacetomonitor, HDMI-A-1
 bind = $mainMod SHIFT, R, movecurrentworkspacetomonitor, eDP-1
 
 # Mediakey binds
